fix overflow style

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,6 +1,5 @@
 body {
   width: 350px;
-  max-height: 500px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
@@ -42,7 +41,7 @@ body {
 
 .pr-container {
   overflow-y: auto;
-  max-height: 400px;
+  max-height: 225px;
 }
 
 .pr-list {
